# ghi-scraper

./: .pre-commit-config.yaml  README.md  ghi_scraper.py  pyproject.toml
ghi_scraper/: __main__.py  github-schema.graphql
