[tool.poetry]
name = "ghi-scraper"
version = "0.1.0"
description = "GitHub Issue Scraper"
authors = ["Aurélien Gâteau <mail@agateau.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ghi_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
gql = { version = "^3.4.1", extras = ["aiohttp"] }

[tool.poetry.scripts]
ghi-scraper = "ghi_scraper.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pyright = "^1.1.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
